# localcast

./: .gitignore  BUILD.md  BUILD_SUMMARY.md  Cargo.toml  DISTRIBUTION.md  build_all.sh  build_app.bat  build_app.sh  build_macos_app.sh  build_windows.sh  start_gui.sh
assets/icon/: LocalCast.icns  README.md
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/lib/l10n/: app_localizations.dart
flutter_app/lib/models/: device.dart  status.dart
flutter_app/lib/providers/: device_provider.dart  file_provider.dart  playback_provider.dart
flutter_app/lib/screens/: device_list_screen.dart  file_picker_screen.dart  playback_screen.dart
flutter_app/lib/services/: api_service.dart  sse_service.dart
flutter_app/lib/widgets/: playback_controls.dart
flutter_app/macos/Runner/: AppDelegate.swift  DebugProfile.entitlements
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
flutter_app/test/: widget_test.dart
flutter_app/windows/runner/: flutter_window.cpp  flutter_window.h  main.cpp
src/: app.rs  cli.rs  discovery.rs  error.rs  main.rs  server.rs
src/api/: handlers.rs  mod.rs  sse.rs  state.rs  types.rs
src/dlna/: metadata.rs  mod.rs  transport.rs  types.rs
src/gui/: i18n.rs  mod.rs  state.rs  theme.rs
src/gui/screens/: device_list.rs  file_picker.rs  mod.rs  playback.rs
src/gui/widgets/: controls.rs  mod.rs  progress_bar.rs
src/tui/: event.rs  mod.rs  ui.rs
